--- a/_columns/The_Big_Picture/zh-cn/2024-09-18.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-18.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stocks Volatile After Fed Goes With Bigger Rate Cut; Why Market Outlook Could Change Soon	美联储更大幅度降息后股市波动;为什么市场前景可能很快发生变化
+  Stocks Volatile After Fed Goes With Bigger Rate Cut; Why Market Outlook Could Change Soon
 date: 2024-09-19 09:55 -0700
 author: JUAN CARLOS ARANCIBIA
 ---
@@ -10,121 +10,95 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
-The stock market waited 2-1/2 years for this day, and it wasn't sure what to do after the Fed officially ended a tightening policy that began in March 2022.  
-股市等了 2-1/2 年才等到这一天，在美联储正式结束 2022 年 3 月开始的紧缩政策后，不确定该怎么做。
+The stock market waited 2-1/2 years for this day, and it wasn't sure what to do after the Fed officially ended a tightening policy that began in March 2022.
 
 
 
 
-Indexes were erratic Wednesday afternoon. The initial announcement of a 50-basis-point rate cut was the larger of two scenarios, and it motivated buyers. The Nasdaq initially climbed more than 1%, and the Russell 2000 rallied more than 2%. But investors soon tempered their enthusiasm.  
-周三下午，指数不稳定。最初宣布降息 50 个基点是两种情况中较大的一种，它激励了买家。纳斯达克指数最初上涨超过 1%，罗素 2000 指数上涨超过 2%。但投资者很快就缓和了他们的热情。
+Indexes were erratic Wednesday afternoon. The initial announcement of a 50-basis-point rate cut was the larger of two scenarios, and it motivated buyers. The Nasdaq initially climbed more than 1%, and the Russell 2000 rallied more than 2%. But investors soon tempered their enthusiasm.
 
 
-As Fed Chair Jerome Powell spoke with reporters, indexes erased most or all gains. That came despite a generally positive Q&A session from Powell. Sellers took control in the final hour, leaving the main indexes at session lows at the closing bell.  
-正如美联储主席杰罗姆鲍威尔与记者交谈时，指数抹去了大部分或全部涨幅。尽管鲍威尔的问答环节总体上是积极的。卖家在最后一小时控制了局面，主要股指在收盘时处于盘中低点。
+As Fed Chair Jerome Powell spoke with reporters, indexes erased most or all gains. That came despite a generally positive Q&A session from Powell. Sellers took control in the final hour, leaving the main indexes at session lows at the closing bell.
 
 
-The S&P 500 closed 0.3% lower, diminishing its intraday record high to just a footnote. The Nasdaq composite and Dow Jones Industrial Average also fell 0.3%. The small-cap Russell 2000 escaped with a gain of less than 0.1%.  
-标准普尔 500 指数收盘下跌 0.3%，将其盘中历史高点缩小到只是一个脚注。纳斯达克综合指数和道琼斯工业平均指数也下跌 0.3%。小盘股罗素 2000 指数以不到 0.1% 的涨幅逃脱。
+The S&P 500 closed 0.3% lower, diminishing its intraday record high to just a footnote. The Nasdaq composite and Dow Jones Industrial Average also fell 0.3%. The small-cap Russell 2000 escaped with a gain of less than 0.1%.
 
 
-Volume rose on the Nasdaq and NYSE from Tuesday's levels. That meant the Nasdaq and S&P 500 picked up a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/).  
-纳斯达克和纽约证券交易所的成交量从周二的水平上升。这意味着纳斯达克和标准普尔 500 指数上涨了[分销日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)。
+Volume rose on the Nasdaq and NYSE from Tuesday's levels. That meant the Nasdaq and S&P 500 picked up a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/).
 
 
-Despite its volatile action Wednesday, the S&P 500's intraday advance was enough to cause the deletion of the Sept. 6 distribution day, which offset Wednesday's new distribution day. The index climbed more than 5% from that day's close, meaning it should no longer factor into the current market analysis.  
-尽管周三走势波动，但标准普尔 500 指数的盘中上涨足以导致 9 月 6 日的分配日被取消，从而抵消了周三的新分配日。该指数从当天收盘价上涨了 5% 以上，这意味着它不应再纳入当前的市场分析。
+Despite its volatile action Wednesday, the S&P 500's intraday advance was enough to cause the deletion of the Sept. 6 distribution day, which offset Wednesday's new distribution day. The index climbed more than 5% from that day's close, meaning it should no longer factor into the current market analysis.
 
 
-Yet the Nasdaq now has a half-dozen days of higher-volume losses, and the S&P has four such days. Those numbers point to a trend of institutional selling that needs to be watched closely in the coming days.  
-然而，纳斯达克指数现在已经连续六天出现高交易量亏损，而标准普尔指数有四天是这样的。这些数字表明，未来几天需要密切关注机构抛售的趋势。
+Yet the Nasdaq now has a half-dozen days of higher-volume losses, and the S&P has four such days. Those numbers point to a trend of institutional selling that needs to be watched closely in the coming days.
 
 
-Stock Market Holds Up For Now股市目前保持稳定
+Stock Market Holds Up For Now
+-----------------------------
+
+
+![](https://www.investors.com/wp-content/uploads/2024/09/MP091824-230x300.jpg)The overall technical profile of the major indexes remained largely unchanged even after the wild afternoon. The Dow, S&P 500, Nasdaq and Russell 2000 continued to hold above their [50-day moving averages](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/).
+
+
+On Wednesday, decliners topped advancers by 7-to-4 on the Nasdaq and by 8-to-7 on the NYSE. Every S&P sector index fell except for Energy Select Sector SPDR ([XLE](https://research.investors.com/quote.aspx?symbol=XLE)), which added 0.2%.
+
+
+But in broader terms, breadth has been improving. The Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)), for example, made a record high Wednesday before reversing lower 0.2%. Stocks making new 52-week highs have been far outnumbering new lows.
+
+
+In a positive sign for leading growth stocks, the IBD 50 0utperformed with a 0.3% increase.
+
+
+But breakouts Wednesday followed the market's weak afternoon. Eight stocks in the [IBD MarketSurge 250 index](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) topped buy points; in all cases, they finished below their entries.
+
+
+Mixed market signals mean the stock market is seeking direction and investors have to be prepared in case of a larger drawdown. IBD's recommended exposure remained at 60%-80%, but it would be smart to be cautious while the market tries to figure out its direction.
+
+
+Stock Market Moves On Powell Comments
 -------------------------------------
 
 
-![](https://www.investors.com/wp-content/uploads/2024/09/MP091824-230x300.jpg)The overall technical profile of the major indexes remained largely unchanged even after the wild afternoon. The Dow, S&P 500, Nasdaq and Russell 2000 continued to hold above their [50-day moving averages](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/).  
-即使在狂欢的下午之后，主要指数的整体技术概况也基本保持不变。道琼斯指数、标准普尔 500 指数、纳斯达克指数和罗素 2000 指数继续保持在 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/)上方。
+Buyers had been guarded ahead of the Fed's announcement. In a press briefing, Powell expressed confidence that the Fed can reach its goal of 2% inflation while keeping the U.S. economy on good footing.
 
 
-On Wednesday, decliners topped advancers by 7-to-4 on the Nasdaq and by 8-to-7 on the NYSE. Every S&P sector index fell except for Energy Select Sector SPDR ([XLE](https://research.investors.com/quote.aspx?symbol=XLE)), which added 0.2%.  
-周三，纳斯达克指数以 7 比 4 的比分领先于上涨的股票，在纽约证券交易所以 8 比 7 的比分领先于上涨的股票。除能源精选行业 SPDR （[XLE](https://research.investors.com/quote.aspx?symbol=XLE)） 上涨 0.2% 外，所有标准普尔板块指数均下跌。
+Powell said there was "broad support" for the [50-basis-point cut](https://www.investors.com/news/economy/federal-reserve-rate-cuts-start-sp-500-jerome-powell/) among members of the Federal Open Market Committee, although one member dissented. The Fed penciled in another half point in rate cuts by the end of the year.
 
 
-But in broader terms, breadth has been improving. The Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)), for example, made a record high Wednesday before reversing lower 0.2%. Stocks making new 52-week highs have been far outnumbering new lows.  
-但从更广泛的角度来看，广度一直在提高。例如，景顺标准普尔 500 等权重 ETF （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 周三创下历史新高，然后回吐 0.2% 的跌幅。创下 52 周新高的股票数量远远超过新低。
+The benchmark 10-year Treasury yield climbed four basis points to 3.68%, the largest one-day increase since Aug. 22.
 
 
-In a positive sign for leading growth stocks, the IBD 50 0utperformed with a 0.3% increase.  
-对于领先的成长股来说，这是一个积极的信号，IBD 50 0ut 表现为 0.3%。
+Jack McIntyre, portfolio manager at Brandywine Global, said in written comments that a more prolonged and predictable easing cycle is at hand.
 
 
-But breakouts Wednesday followed the market's weak afternoon. Eight stocks in the [IBD MarketSurge 250 index](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) topped buy points; in all cases, they finished below their entries.  
-但周三的突破是在市场疲软的下午之后出现的。[IBD MarketSurge 250 指数](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)中有八只股票的买入点位居榜首;在所有情况下，他们的成绩都低于他们的参赛作品。
+"It now will be a battle between market expectations and the Fed, with employment data — not inflation data — determining which side is right," McIntyre said. "Since this policy move was mostly telegraphed, there is no outsized move in financial markets. Now, everyone is back to data dependency."
 
 
-Mixed market signals mean the stock market is seeking direction and investors have to be prepared in case of a larger drawdown. IBD's recommended exposure remained at 60%-80%, but it would be smart to be cautious while the market tries to figure out its direction.  
-混合市场信号意味着股市正在寻求方向，投资者必须为更大的跌幅做好准备。IBD 的建议敞口保持在 60%-80%，但在市场试图弄清楚其方向时保持谨慎是明智的。
+Jeff Schulze, head of economic and market strategy at ClearBridge Investments, said the Fed's dot-plot changed substantially. Fed policymakers now expect another six cuts by the end of 2025, which is much closer to current market pricing.
 
 
-Stock Market Moves On Powell Comments鲍威尔评论股市走势
-----------------------------------------------
+"Should this rate path come to fruition, the 10-year Treasury will likely move higher on the back of stronger expected economic momentum," Schulze said. "This would rhyme with prior soft landing cutting cycles as the 10-year Treasury has historically moved higher in a sell-the-news fashion following the initial rate cut. Going forward, we expect the Fed will move in 25 bp (basis point) increments to further recalibrate policy barring a material deterioration in the labor market."
 
 
-Buyers had been guarded ahead of the Fed's announcement. In a press briefing, Powell expressed confidence that the Fed can reach its goal of 2% inflation while keeping the U.S. economy on good footing.  
-在美联储宣布之前，买家一直保持警惕。鲍威尔在新闻发布会上表示，他有信心美联储能够实现 2% 的通胀目标，同时保持美国经济的良好基础。
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_091824.pdf)
 
 
-Powell said there was "broad support" for the [50-basis-point cut](https://www.investors.com/news/economy/federal-reserve-rate-cuts-start-sp-500-jerome-powell/) among members of the Federal Open Market Committee, although one member dissented. The Fed penciled in another half point in rate cuts by the end of the year.  
-鲍威尔表示，联邦公开市场委员会（FOMC）成员“广泛支持”降[息50个基点](https://www.investors.com/news/economy/federal-reserve-rate-cuts-start-sp-500-jerome-powell/)，但有一名成员持反对意见。美联储预计在年底前再降息半个百分点。
+**YOU MAY ALSO LIKE:**
 
 
-The benchmark 10-year Treasury yield climbed four basis points to 3.68%, the largest one-day increase since Aug. 22.  
-基准 10 年期美国国债收益率攀升 4 个基点至 3.68%，为 8 月 22 日以来的最大单日涨幅。
+[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
 
 
-Jack McIntyre, portfolio manager at Brandywine Global, said in written comments that a more prolonged and predictable easing cycle is at hand.  
-Brandywine Global 投资组合经理 Jack McIntyre 在书面评论中表示，一个更持久、更可预测的宽松周期即将到来。
+[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-"It now will be a battle between market expectations and the Fed, with employment data — not inflation data — determining which side is right," McIntyre said. "Since this policy move was mostly telegraphed, there is no outsized move in financial markets. Now, everyone is back to data dependency."  
-麦金太尔说：“现在将是市场预期与美联储之间的一场战斗，就业数据——而不是通胀数据——决定哪一方是对的。“由于这项政策举措主要是通过电报进行的，因此金融市场没有太大的波动。现在，每个人都回到了对数据的依赖上。
+[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
-Jeff Schulze, head of economic and market strategy at ClearBridge Investments, said the Fed's dot-plot changed substantially. Fed policymakers now expect another six cuts by the end of 2025, which is much closer to current market pricing.  
-ClearBridge Investments 经济和市场战略主管 Jeff Schulze 表示，美联储的点阵图发生了重大变化。美联储政策制定者现在预计，到 2025 年底，美联储将再降息 6 次，这与当前的市场定价要接近得多。
+[Get Free IBD Newsletters: Market Prep \| Tech Report \| How To Invest](https://shop.investors.com/offer/splashresponsive.aspx?id=newsletters-howtoinvest)
 
 
-"Should this rate path come to fruition, the 10-year Treasury will likely move higher on the back of stronger expected economic momentum," Schulze said. "This would rhyme with prior soft landing cutting cycles as the 10-year Treasury has historically moved higher in a sell-the-news fashion following the initial rate cut. Going forward, we expect the Fed will move in 25 bp (basis point) increments to further recalibrate policy barring a material deterioration in the labor market."  
-“如果这条利率路径实现，10 年期美国国债可能会在更强劲的预期经济势头的支持下走高，”舒尔茨说。“这将与之前的软着陆降息周期相吻合，因为 10 年期美国国债历来在首次降息后以推销新闻的方式走高。展望未来，我们预计美联储将以 25 个基点的增量进一步重新调整政策，除非劳动力市场出现实质性恶化。
-
-
-[View General Market Indicator charts page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_091824.pdf)
-
-
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
-
-
-[The Four Pillars Of The IBD Methodology  
-IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
-
-
-[Risk Management In The Stock Market: How Much Money To Invest  
-股票市场的风险管理：投资多少钱](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
-
-
-[IBD Live: Learn And Analyze Growth Stocks With The Pros  
-IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
-
-
-[Get Free IBD Newsletters: Market Prep \| Tech Report \| How To Invest  
-获取免费的 IBD 时事通讯：市场准备 |技术报告 |如何投资](https://shop.investors.com/offer/splashresponsive.aspx?id=newsletters-howtoinvest)
-
-
-[What To Do Now After Stocks End Lower Despite Big Rate Cut  
-尽管大幅降息，但股市收盘走低后现在该怎么办](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-stock-market-lower-fed-rate-cut/)
+[What To Do Now After Stocks End Lower Despite Big Rate Cut](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-stock-market-lower-fed-rate-cut/)
 
 
 
