--- a/_columns/The_Big_Picture/zh-cn/2024-09-19.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-19.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Dow Jones, S&P 500 Hit New Highs; 4 Leaders In Buy Zones As Breakouts Enhance Stock Market Outlook	道琼斯、标准普尔 500 指数创下新高;4 个领先企业进入买入区，突破增强股市前景
+  Dow Jones, S&P 500 Hit New Highs; 4 Leaders In Buy Zones As Breakouts Enhance Stock Market Outlook
 date: 2024-09-19 17:24 -0700
 author: SCOTT LEHTONEN
 ---
@@ -10,30 +10,24 @@ author: SCOTT LEHTONEN
 
 
 
-The Dow Jones Industrial Average and S&P 500 hit new highs Thursday, as Wall Street had a delayed positive reaction to Wednesday's Federal Reserve interest-rate cut. And the Nasdaq composite closed at its highest level since July 16.  
-道琼斯工业平均指数和标准普尔 500 指数周四创下新高，因为华尔街对美联储周三降息的积极反应延迟。纳斯达克综合指数收于 7 月 16 日以来的最高水平。
+The Dow Jones Industrial Average and S&P 500 hit new highs Thursday, as Wall Street had a delayed positive reaction to Wednesday's Federal Reserve interest-rate cut. And the Nasdaq composite closed at its highest level since July 16.
 
 
 
 
-The Dow Jones Industrial Average rose 1.3% to close above 42,000 for the first time. The S&P 500 gained 1.7%, while the Nasdaq composite rallied 2.5%. The small-cap Russell 2000 index climbed 2.1%.  
-道琼斯工业平均指数上涨 1.3%，首次收于 42,000 点以上。标准普尔 500 指数上涨 1.7%，而纳斯达克综合指数上涨 2.5%。小盘股罗素 2000 指数上涨 2.1%。
+The Dow Jones Industrial Average rose 1.3% to close above 42,000 for the first time. The S&P 500 gained 1.7%, while the Nasdaq composite rallied 2.5%. The small-cap Russell 2000 index climbed 2.1%.
 
 
-Eight of the 11 S&P 500 sectors ended higher, with technology and consumer discretionary leading the way. Defensive sectors — consumer staples, real estate and utilities — fell as investors embraced risk.  
-标准普尔 500 指数的 11 个板块中有 8 个板块收高，其中科技和非必需消费品领涨。由于投资者接受风险，防御性板块——必需消费品、房地产和公用事业——下跌。
+Eight of the 11 S&P 500 sectors ended higher, with technology and consumer discretionary leading the way. Defensive sectors — consumer staples, real estate and utilities — fell as investors embraced risk.
 
 
-Breadth was positive, as [advancers topped decliners](https://www.marketwatch.com/market-data/us?mod=market-data-center) by nearly 4-to-1 on the NYSE and by nearly 3-to-1- on the Nasdaq.  
-广度是积极的，纽约证券交易所[的上涨股](https://www.marketwatch.com/market-data/us?mod=market-data-center)以近 4 比 1 的比分领先于下跌的股票，在纳斯达克指数的涨幅接近 3 比 1。
+Breadth was positive, as [advancers topped decliners](https://www.marketwatch.com/market-data/us?mod=market-data-center) by nearly 4-to-1 on the NYSE and by nearly 3-to-1- on the Nasdaq.
 
 
-Volume edged lower on the Nasdaq but was higher on the New York Stock Exchange from Wednesday's session.  
-纳斯达克的成交量小幅走低，但纽约证券交易所的成交量比周三的交易时段有所上升。
+Volume edged lower on the Nasdaq but was higher on the New York Stock Exchange from Wednesday's session.
 
 
-The Nasdaq's Sept. 3 [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) dropped off the overall count. When an index moves up 5% from the closing price of the distribution day, then it is considered no longer relevant to the current count.  
-纳斯达克 9 月 3 日[的发行日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)比总计数下降。当指数从分配日的收盘价上涨 5% 时，则认为它不再与当前计数相关。
+The Nasdaq's Sept. 3 [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) dropped off the overall count. When an index moves up 5% from the closing price of the distribution day, then it is considered no longer relevant to the current count.
 
 
 
@@ -41,8 +35,7 @@ The Nasdaq's Sept. 3 [distribution day](https://www.investors.com/how-to-invest/
 ---
 
 
-[**Nvidia, Apple And Tesla Highlight How To Handle This Market  
-英伟达、苹果和特斯拉强调如何应对这一市场**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
+[**Nvidia, Apple And Tesla Highlight How To Handle This Market**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
 
 
 
@@ -50,52 +43,42 @@ The Nasdaq's Sept. 3 [distribution day](https://www.investors.com/how-to-invest/
 ---
 
 
-Dow Jones Winners And Losers道琼斯赢家和输家
-------------------------------------
+Dow Jones Winners And Losers
+----------------------------
 
 
-![](https://www.investors.com/wp-content/uploads/2024/09/MP091924--262x300.jpg)In the Dow Jones index, **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) were among the biggest winners Thursday, with gains of 5.4% and 5.1%, respectively. They combined for more than 200 of the Dow's 522-point increase Thursday.  
-在道琼斯指数中，**Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 和 **Caterpillar** （[CAT）](https://research.investors.com/quote.aspx?symbol=CAT) 周四是最大的赢家之一，分别上涨 5.4% 和 5.1%。周四道琼斯指数上涨 522 点，其中 200 多点加起来。
+![](https://www.investors.com/wp-content/uploads/2024/09/MP091924--262x300.jpg)In the Dow Jones index, **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) were among the biggest winners Thursday, with gains of 5.4% and 5.1%, respectively. They combined for more than 200 of the Dow's 522-point increase Thursday.
 
 
-Meanwhile, **McDonald's** ([MCD](https://research.investors.com/quote.aspx?symbol=MCD)) contributed more than 215 points to the Dow Jones industrials' point gain, according to Dow Jones Market Data.  
-与此同时，根据道琼斯市场数据，**麦当劳** （[MCD](https://research.investors.com/quote.aspx?symbol=MCD)） 为道琼斯工业指数的涨幅贡献了超过 215 点。
+Meanwhile, **McDonald's** ([MCD](https://research.investors.com/quote.aspx?symbol=MCD)) contributed more than 215 points to the Dow Jones industrials' point gain, according to Dow Jones Market Data.
 
 
-On the downside, **Coca-Cola** ([KO](https://research.investors.com/quote.aspx?symbol=KO)) and **Procter & Gamble** ([PG](https://research.investors.com/quote.aspx?symbol=PG)) were the biggest losers on the session, down 1.6% and 1.4%, respectively. It was another sign that investors moved away from defensive assets.  
-从下行的一面来看，**可口可乐**（[KO）](https://research.investors.com/quote.aspx?symbol=KO)和**宝洁**（[PG）](https://research.investors.com/quote.aspx?symbol=PG)是本次交易日的最大输家，分别下跌了1.6%和1.4%。这是投资者远离防御性资产的另一个迹象。
+On the downside, **Coca-Cola** ([KO](https://research.investors.com/quote.aspx?symbol=KO)) and **Procter & Gamble** ([PG](https://research.investors.com/quote.aspx?symbol=PG)) were the biggest losers on the session, down 1.6% and 1.4%, respectively. It was another sign that investors moved away from defensive assets.
 
 
-[All of the Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended higher as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) jumped 3.7%. Notably, **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) rallied 4% to regain its 50-day moving average, while **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) raced above an early entry at 235, the high price on Sept. 5.  
-随着 Roundhill Magnificent Seven ETF （[MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)） 上涨 3.7%，[所有 Magnificent Seven 股票](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/)收高。值得注意的是，**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 上涨 4% 以收复其 50 天移动平均线，而**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 在 9 月 5 日的高价 235 上方飙升。
+[All of the Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended higher as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) jumped 3.7%. Notably, **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) rallied 4% to regain its 50-day moving average, while **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) raced above an early entry at 235, the high price on Sept. 5.
 
 
-The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) gained 2.1% Thursday. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/), **Monday.com** ([MNDY](https://research.investors.com/quote.aspx?symbol=MNDY)) climbed 5% to break out past a 272.77 alternate entry.  
-Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 周四上涨 2.1%。在 [IBD 50](https://research.investors.com/stock-lists/ibd-50/) 中，**Monday.com** （[MNDY）](https://research.investors.com/quote.aspx?symbol=MNDY) 上涨 5%，突破 272.77 的备用入场点。
+The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) gained 2.1% Thursday. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/), **Monday.com** ([MNDY](https://research.investors.com/quote.aspx?symbol=MNDY)) climbed 5% to break out past a 272.77 alternate entry.
 
 
-What To Do Now 现在该做什么
----------------------
+What To Do Now
+--------------
 
 
-Thursday's rally was more evidence of stock market strength following Wednesday's hesitant action. That results in IBD's recommended market exposure level being lifted from 60%-80% to 80%-100%.  
-周四的反弹更多地证明了股市在周三犹豫不决的行动之后走强。这导致 IBD 建议的市场敞口水平从 60%-80% 提高到 80%-100%。
+Thursday's rally was more evidence of stock market strength following Wednesday's hesitant action. That results in IBD's recommended market exposure level being lifted from 60%-80% to 80%-100%.
 
 
-That means that investors can add more positions as market leaders break out past new entries. Those are good opportunities to put some capital to work.  
-这意味着投资者可以在市场领导者突破过去的新进入时增加更多头寸。这些都是投入一些资金的好机会。
+That means that investors can add more positions as market leaders break out past new entries. Those are good opportunities to put some capital to work.
 
 
-Despite favorable action, the current environment still requires [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market.  
-尽管采取了有利的行动，但当前的环境仍然需要[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。这意味着逐步增加和减少风险敞口，以与大盘保持同步。
+Despite favorable action, the current environment still requires [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market.
 
 
-[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s Breaking Out Today list featured another three stocks, building on a number of breakouts this week. That's another bullish layer for the stock market outlook.  
-[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 的 Breaking Out Today 名单以本周的多次突破为基础，介绍了另外三只股票。这是股市前景的另一个看涨因素。
+[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s Breaking Out Today list featured another three stocks, building on a number of breakouts this week. That's another bullish layer for the stock market outlook.
 
 
-Meanwhile, there are another 16 ideas appearing on MarketSurge's Near Pivot list, suggesting there are more buying opportunities ready to emerge.  
-与此同时，MarketSurge 的 Near Pivot 列表中还出现了另外 16 个想法，这表明有更多买入机会即将出现。
+Meanwhile, there are another 16 ideas appearing on MarketSurge's Near Pivot list, suggesting there are more buying opportunities ready to emerge.
 
 
 
@@ -103,8 +86,7 @@ Meanwhile, there are another 16 ideas appearing on MarketSurge's Near Pivot list
 ---
 
 
-[**Keep Trying, Nvidia, But These 19 Stocks Are Already 'Perfect'  
-继续尝试，英伟达，但这 19 只股票已经是“完美”的**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
+[**Keep Trying, Nvidia, But These 19 Stocks Are Already 'Perfect'**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
 
 
 
@@ -113,61 +95,49 @@ Meanwhile, there are another 16 ideas appearing on MarketSurge's Near Pivot list
 
 
 
-Stock Market Leaders: Arista, DoorDash, Meta, Spotify股市领导者：Arista、DoorDash、Meta、Spotify
----------------------------------------------------------------------------------------
+Stock Market Leaders: Arista, DoorDash, Meta, Spotify
+-----------------------------------------------------
 
 
-Amid the stock market rebound, leaders to watch include **Arista Networks** ([ANET](https://research.investors.com/quote.aspx?symbol=ANET)), **DoorDash** ([DASH](https://research.investors.com/quote.aspx?symbol=DASH)), **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) and **Spotify** ([SPOT](https://research.investors.com/quote.aspx?symbol=SPOT)).  
-在股市反弹中，值得关注的领导者包括 **Arista Networks** （[ANET](https://research.investors.com/quote.aspx?symbol=ANET)）、**DoorDash** （[DASH](https://research.investors.com/quote.aspx?symbol=DASH)）、**Meta Platforms** （[META）](https://research.investors.com/quote.aspx?symbol=META) 和 **Spotify** （[SPOT](https://research.investors.com/quote.aspx?symbol=SPOT)）。
+Amid the stock market rebound, leaders to watch include **Arista Networks** ([ANET](https://research.investors.com/quote.aspx?symbol=ANET)), **DoorDash** ([DASH](https://research.investors.com/quote.aspx?symbol=DASH)), **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) and **Spotify** ([SPOT](https://research.investors.com/quote.aspx?symbol=SPOT)).
 
 
-Arista Networks is breaking out past a 376.50 buy point in a consolidation, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) pattern recognition. The stock was on the MarketSurge Growth 250 Breaking Out Today list.  
-根据 [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 模式识别，Arista Networks 在盘整中突破 376.50 买入点。该股在 MarketSurge Growth 250 Breaking Out Today 名单上。
+Arista Networks is breaking out past a 376.50 buy point in a consolidation, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) pattern recognition. The stock was on the MarketSurge Growth 250 Breaking Out Today list.
 
 
-DoorDash rallied further above a 131.21 cup-with-handle entry after BTIG upgraded the stock from neutral to buy, with a 155 price target.  
-在 BTIG 将该股从中性上调至买入后，DoorDash 进一步反弹至 131.21 杯带把手入场点上方，目标价为 155。
+DoorDash rallied further above a 131.21 cup-with-handle entry after BTIG upgraded the stock from neutral to buy, with a 155 price target.
 
 
-Social media giant Meta Platforms jumped above a 544.23 alternative buy point Thursday, closing at new highs.  
-社交媒体巨头 Meta Platforms 周四跃升至 544.23 的另类买入点上方，收于新高。
+Social media giant Meta Platforms jumped above a 544.23 alternative buy point Thursday, closing at new highs.
 
 
-Finally, [Spotify shares](https://www.investors.com/research/ibd-stock-of-the-day/spotify-stock-forecast-1-billion-active-users/) are breaking out above a 359.38 entry. The [music streaming platform](https://www.investors.com/news/technology/spotify-stock-hits-high-note-price-target-hike/) and [IBD SwingTrader idea](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader) jumped 4.7%, closing in a 5% buy area that runs up to 377.35.  
-最后，[Spotify 股价](https://www.investors.com/research/ibd-stock-of-the-day/spotify-stock-forecast-1-billion-active-users/)突破 359.38 的入场点。[音乐流媒体平台](https://www.investors.com/news/technology/spotify-stock-hits-high-note-price-target-hike/)和 [IBD SwingTrader 想法](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader)上涨 4.7%，收于 5% 的买入区域，最高可达 377.35。
+Finally, [Spotify shares](https://www.investors.com/research/ibd-stock-of-the-day/spotify-stock-forecast-1-billion-active-users/) are breaking out above a 359.38 entry. The [music streaming platform](https://www.investors.com/news/technology/spotify-stock-hits-high-note-price-target-hike/) and [IBD SwingTrader idea](https://www.investors.com/product/swingtrader/?artProdLink=Swingtrader) jumped 4.7%, closing in a 5% buy area that runs up to 377.35.
 
 
-[View General Market Indicator charts page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_091924.pdf)
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_091924.pdf)
 
 
-*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.  
-请务必关注 Scott Lehtonen 在 [X at @IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) 上了解有关道琼斯工业平均指数和股市新闻的更多信息。*
+*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.*
 
 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
-查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones  
-在今天的股市和道琼斯值得购买和关注的顶级成长股](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
 
 
 
