--- a/_columns/The_Big_Picture/zh-cn/2024-09-20.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-20.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Ends Week With Bullish Gains; Inflation Data, These Earnings Loom	股市以看涨涨幅收盘;通胀数据，这些收益迫在眉睫
+  Stock Market Ends Week With Bullish Gains; Inflation Data, These Earnings Loom
 date: 2024-09-20 17:39 -0700
 author: MICHAEL LARKIN
 ---
@@ -10,50 +10,40 @@ author: MICHAEL LARKIN
 
 
 
-The stock market broadly fell Friday, but major indexes ended the week with strong gains thanks to the Federal Reserve's interest rate cut. Now fresh inflation data and some noteworthy earnings reports loom.  
-股市周五普遍下跌，但由于美联储降息，主要股指本周收盘强劲上涨。现在，新的通胀数据和一些值得注意的收益报告迫在眉睫。
+The stock market broadly fell Friday, but major indexes ended the week with strong gains thanks to the Federal Reserve's interest rate cut. Now fresh inflation data and some noteworthy earnings reports loom.
 
 
 
 
-The Nasdaq composite fared worst among the major indexes Friday, falling 0.4% and adding a distribution day. But it posted a solid weekly increase of 1.5% and a monthly lift of 1.3% thus far. The tech-heavy index sits comfortably above its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) and its year-to-date gain now sits at 19.6%.  
-纳斯达克综合指数周五在主要指数中表现最差，下跌 0.4% 并增加一个派发日。但到目前为止，它公布了 1.5% 的稳健周涨幅和 1.3% 的月涨幅。该指数稳居其 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)上方，年初至今的涨幅目前为 19.6%。
+The Nasdaq composite fared worst among the major indexes Friday, falling 0.4% and adding a distribution day. But it posted a solid weekly increase of 1.5% and a monthly lift of 1.3% thus far. The tech-heavy index sits comfortably above its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) and its year-to-date gain now sits at 19.6%.
 
 
-The S&P 500 dipped 0.2%, but it was fractionally too low to count as a distribution day. The benchmark index notched a weekly rise of 1.4% and it, too, is now positive for the month. The index is sitting pretty above its short-term and major moving averages and also shows a 19.6% move higher thus far this year.  
-标准普尔 500 指数下跌 0.2%，但略低，无法算作派发日。该基准指数每周上涨 1.4%，现在本月也呈正值。该指数远高于其短期和主要移动平均线，今年迄今还上涨了 19.6%。
+The S&P 500 dipped 0.2%, but it was fractionally too low to count as a distribution day. The benchmark index notched a weekly rise of 1.4% and it, too, is now positive for the month. The index is sitting pretty above its short-term and major moving averages and also shows a 19.6% move higher thus far this year.
 
 
-Decliners led advancers led by nearly 2-to-1 on both the New York Stock Exchange and the Nasdaq. Volume was heavier on the stock market amid triple witching.  
-纽约证券交易所和纳斯达克股市以近 2 比 1 的比例领涨。在三重巫术中，股市的成交量更大。
+Decliners led advancers led by nearly 2-to-1 on both the New York Stock Exchange and the Nasdaq. Volume was heavier on the stock market amid triple witching.
 
 
-The Dow Jones Industrial Average closed at a record high after rising 0.1% Friday. Its weekly gain came in at 1.6%. The blue-chip index got aid from a 6.8% jump by **Nike** ([NKE](https://research.investors.com/quote.aspx?symbol=NKE)), which rallied on news of a change in chief executives. Also, **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) popped 3.3% [after the Wall Street Journal reported](https://www.wsj.com/business/deals/qualcomm-approached-intel-about-a-takeover-in-recent-days-fa114f9d) that **Qualcomm** ([QCOM](https://research.investors.com/quote.aspx?symbol=QCOM)) approached the chip giant about a possible takeover.  
-道琼斯工业平均指数周五上涨 0.1% 后收于历史新高。其每周涨幅为 1.6%。**耐克** （[NKE](https://research.investors.com/quote.aspx?symbol=NKE)） 上涨 6.8% 为蓝筹股指数提供了帮助，该公司在首席执行官变动的消息传出后上涨。此外，**在**[《华尔街日报》报道](https://www.wsj.com/business/deals/qualcomm-approached-intel-about-a-takeover-in-recent-days-fa114f9d)称**高通** （[QCOM）](https://research.investors.com/quote.aspx?symbol=QCOM) 就可能的收购与这家芯片巨头接洽后，英特尔 （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 上涨 3.3%。
+The Dow Jones Industrial Average closed at a record high after rising 0.1% Friday. Its weekly gain came in at 1.6%. The blue-chip index got aid from a 6.8% jump by **Nike** ([NKE](https://research.investors.com/quote.aspx?symbol=NKE)), which rallied on news of a change in chief executives. Also, **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) popped 3.3% [after the Wall Street Journal reported](https://www.wsj.com/business/deals/qualcomm-approached-intel-about-a-takeover-in-recent-days-fa114f9d) that **Qualcomm** ([QCOM](https://research.investors.com/quote.aspx?symbol=QCOM)) approached the chip giant about a possible takeover.
 
 
-Small caps were mauled by the bears, with the Russell 2000 falling 1.1%. Still, it was not enough to stop it posting weekly gain of 2.2% though. Growth stocks fared better. The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund inched up 0.1% Friday. It now is back above its major moving averages thanks to a weekly gain of 3.7%.  
-小盘股受到空头的打击，罗素 2000 指数下跌 1.1%。尽管如此，这还不足以阻止它每周上涨 2.2%。成长股表现更好。Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 交易所交易基金周五小幅上涨 0.1%。由于每周上涨 3.7%，它现在回到了其主要移动平均线上方。
+Small caps were mauled by the bears, with the Russell 2000 falling 1.1%. Still, it was not enough to stop it posting weekly gain of 2.2% though. Growth stocks fared better. The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund inched up 0.1% Friday. It now is back above its major moving averages thanks to a weekly gain of 3.7%.
 
 
-Fed Cut Aids Stock Market, PCE Inflation Data Next美联储降息有助于股市，PCE 通胀数据 下一个
--------------------------------------------------------------------------
+Fed Cut Aids Stock Market, PCE Inflation Data Next
+--------------------------------------------------
 
 
-![](https://www.investors.com/wp-content/uploads/2024/09/MP092024.jpg)Stocks got a big boost when the Fed moved to slash rates a half point on Wednesday. But Federal Reserve Gov. Michelle Bowman, the lone voice of dissent on the bumper cut, issued a statement Friday where she said that "we have not yet achieved our inflation goal" and that the move could be seen as a "premature declaration of victory."  
-当美联储周三将利率下调半个基点时，股市得到了大幅提振。但美联储理事米歇尔·鲍曼（Michelle Bowman）是反对减税的唯一声音，她周五发表声明称，“我们还没有实现我们的通胀目标”，此举可能被视为“过早的胜利宣言”。
+![](https://www.investors.com/wp-content/uploads/2024/09/MP092024.jpg)Stocks got a big boost when the Fed moved to slash rates a half point on Wednesday. But Federal Reserve Gov. Michelle Bowman, the lone voice of dissent on the bumper cut, issued a statement Friday where she said that "we have not yet achieved our inflation goal" and that the move could be seen as a "premature declaration of victory."
 
 
-Whether she is correct or not will become clearer on Friday, when Personal Consumption Expenditures index data for August is released by the Bureau of Economic Analysis. Headline PCE is seen rising 2.5% year over year while core PCE, which strips out volatile food and energy prices, is expected to post an annualized rise of 2.6%.  
-她是否正确，将在周五经济分析局（Bureau of Economic Analysis）公布8月份个人消费支出指数数据时变得更加清楚。整体 PCE 预计同比增长 2.5%，而剔除波动的食品和能源价格的核心 PCE 预计将实现 2.6% 的年化增长。
+Whether she is correct or not will become clearer on Friday, when Personal Consumption Expenditures index data for August is released by the Bureau of Economic Analysis. Headline PCE is seen rising 2.5% year over year while core PCE, which strips out volatile food and energy prices, is expected to post an annualized rise of 2.6%.
 
 
-Other notable economic data due in the coming week includes the latest consumer confidence reading, which drops Tuesday. Also on the agenda are new-home sales data for August, which comes Wednesday, and revised second-quarter GDP data on Thursday.  
-未来一周公布的其他值得注意的经济数据包括最新的消费者信心数据，该数据周二下降。议程上还有周三公布的 8 月新屋销售数据，以及周四修正后的第二季度 GDP 数据。
+Other notable economic data due in the coming week includes the latest consumer confidence reading, which drops Tuesday. Also on the agenda are new-home sales data for August, which comes Wednesday, and revised second-quarter GDP data on Thursday.
 
 
-A few noteworthy [earnings reports loom in the coming week](https://www.investors.com/research/earnings-preview/costco-stock-earnings-kb-home/). These include **Costco Wholesale** ([COST](https://research.investors.com/quote.aspx?symbol=COST)), **Micron Technology** ([MU](https://research.investors.com/quote.aspx?symbol=MU)) and **KB Home** ([KBH](https://research.investors.com/quote.aspx?symbol=KBH)).  
-未来一周将有几份值得注意的[收益报告](https://www.investors.com/research/earnings-preview/costco-stock-earnings-kb-home/)。其中包括 **Costco Wholesale** （[COST）、](https://research.investors.com/quote.aspx?symbol=COST)**Micron Technology** （[MU）](https://research.investors.com/quote.aspx?symbol=MU) 和 **KB Home** （[KBH](https://research.investors.com/quote.aspx?symbol=KBH)）。
+A few noteworthy [earnings reports loom in the coming week](https://www.investors.com/research/earnings-preview/costco-stock-earnings-kb-home/). These include **Costco Wholesale** ([COST](https://research.investors.com/quote.aspx?symbol=COST)), **Micron Technology** ([MU](https://research.investors.com/quote.aspx?symbol=MU)) and **KB Home** ([KBH](https://research.investors.com/quote.aspx?symbol=KBH)).
 
 
 
@@ -61,8 +51,7 @@ A few noteworthy [earnings reports loom in the coming week](https://www.investor
 ---
 
 
-**[Bulls In Control With 3 Titans In Buy Areas; What To Do Now  
-多头控制着 3 个泰坦在买入区域;现在该做什么](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-bulls-meta-apple-tesla-in-buy-areas/)**
+**[Bulls In Control With 3 Titans In Buy Areas; What To Do Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-bulls-meta-apple-tesla-in-buy-areas/)**
 
 
 
@@ -70,60 +59,48 @@ A few noteworthy [earnings reports loom in the coming week](https://www.investor
 ---
 
 
-FedEx Hurts This Group FedEx 伤害了这个群体
-------------------------------------
+FedEx Hurts This Group
+----------------------
 
 
-A majority of the [S&P 500 sectors closed in negative territory Friday](https://www.investors.com/category/etfs-and-funds/sectors/). Utilities, a defensive area, outperformed by a large margin. Materials and industrials were the worst laggards on the stock market.  
-[标准普尔 500 指数的大部分板块周五收于负值区域](https://www.investors.com/category/etfs-and-funds/sectors/)。防御性领域公用事业表现大幅领先。材料和工业是股市上表现最差的板块。
+A majority of the [S&P 500 sectors closed in negative territory Friday](https://www.investors.com/category/etfs-and-funds/sectors/). Utilities, a defensive area, outperformed by a large margin. Materials and industrials were the worst laggards on the stock market.
 
 
 
-Once again, the relative performance of the 197 IBD industry groups gave investors a deeper insight into the action on [the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).  
-197 个 IBD 行业组的相对表现再次让投资者对[当今股市](https://www.investors.com/news/stock-market-today-stock-market-news/)的行动有了更深入的了解。
+Once again, the relative performance of the 197 IBD industry groups gave investors a deeper insight into the action on [the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).
 
 
-Alternative energy stocks, electric utilities, oil-and-gas realty trusts, computer hardware firms, and cable and satellite telecom plays were among the best performers.  
-替代能源股、电力公用事业、石油和天然气房地产信托、计算机硬件公司以及有线电视和卫星电信公司表现最佳。
+Alternative energy stocks, electric utilities, oil-and-gas realty trusts, computer hardware firms, and cable and satellite telecom plays were among the best performers.
 
 
-Conversely, drugstores, chip equipment and manufacturing stocks, and trucking firms plays all lagged.  
-相反，药店、芯片设备和制造股票以及卡车运输公司都表现落后。
+Conversely, drugstores, chip equipment and manufacturing stocks, and trucking firms plays all lagged.
 
 
-The airfreight group fared worst of all, dragged down by a post-earnings plunge by **FedEx** ([FDX](https://research.investors.com/quote.aspx?symbol=FDX)). It flashed sell signals by gapping below its 50-day and 200-day moving averages.  
-空运集团表现最差，受到**联邦快递** （[FDX](https://research.investors.com/quote.aspx?symbol=FDX)） 财报暴跌的拖累。它跳空跌破 50 天和 200 天移动平均线，发出卖出信号。
+The airfreight group fared worst of all, dragged down by a post-earnings plunge by **FedEx** ([FDX](https://research.investors.com/quote.aspx?symbol=FDX)). It flashed sell signals by gapping below its 50-day and 200-day moving averages.
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_092024.pdf).  
-[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_092024.pdf)。
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_092024.pdf).
 
 
-*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
-请在 X 上关注 Michael Larkin，前身为 Twitter，网址为 [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 对成长型股票的更多分析。*
+*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.*
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[The New Magnificent Seven? These Stocks Not Named Nvidia Clear Entries  
-新的壮丽七人组？这些未命名的股票 Nvidia Clear 条目](https://www.investors.com/research/new-magnificent-seven-nvidia-arista-networks-ge-aerospace-spotify/)
+[The New Magnificent Seven? These Stocks Not Named Nvidia Clear Entries](https://www.investors.com/research/new-magnificent-seven-nvidia-arista-networks-ge-aerospace-spotify/)
 
 
-[These Are The Five Best Stocks To Buy And Watch Now  
-这些是现在购买和观看的五只最佳股票](https://www.investors.com/research/best-stocks-to-buy-now/)
+[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Stock Market Forecast: AI Investing And Four More Predictions  
-股市预测：AI 投资和其他四个预测](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
+[Stock Market Forecast: AI Investing And Four More Predictions](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open  
-每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?  
-这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
 
