--- a/_columns/The_Big_Picture/zh-cn/2024-10-03.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-03.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Falls As Wall Street Braces For Crucial Jobs Report	华尔街为关键就业报告做准备，股市下跌
+  Stock Market Falls As Wall Street Braces For Crucial Jobs Report
 date: 2024-10-03 17:32 -0700
 author: SCOTT LEHTONEN
 ---
@@ -10,42 +10,33 @@ author: SCOTT LEHTONEN
 
 
 
-The stock market finished a seesaw session lower Thursday, as Wall Street braced for a September jobs report Friday that could have implications on Fed rate policy.  
-股市周四收盘走低，因为华尔街为周五的 9 月就业报告做准备，该报告可能对美联储的利率政策产生影响。
+The stock market finished a seesaw session lower Thursday, as Wall Street braced for a September jobs report Friday that could have implications on Fed rate policy.
 
 
 
 
-The Dow Jones Industrial Average fell 0.4% to hold just above the 42,000 price level. The S&P 500 dipped nearly 0.2%, while the Nasdaq composite moved down a fraction. The small-cap Russell 2000 index lost 0.7% and is now 3.5% off its Sept. 18 high.  
-道琼斯工业平均指数下跌 0.4%，略高于 42,000 点价格水平。标准普尔 500 指数下跌近 0.2%，而纳斯达克综合指数下跌一小部分。小盘股罗素 2000 指数下跌 0.7%，目前较 9 月 18 日的高点下跌 3.5%。
+The Dow Jones Industrial Average fell 0.4% to hold just above the 42,000 price level. The S&P 500 dipped nearly 0.2%, while the Nasdaq composite moved down a fraction. The small-cap Russell 2000 index lost 0.7% and is now 3.5% off its Sept. 18 high.
 
 
-Volume dropped on the Nasdaq and the New York Stock Exchange from Wednesday's session.  
-纳斯达克和纽约证券交易所的成交量从周三的交易时段开始下降。
+Volume dropped on the Nasdaq and the New York Stock Exchange from Wednesday's session.
 
 
-Eight of the 11 S&P 500 sectors ended lower, with consumer discretionary and materials leading the downside. The energy, technology and communication services sectors were the only advancers.  
-标准普尔 500 指数的 11 个板块中有 8 个收低，其中非必需消费品和材料板块领跌。能源、技术和通信服务行业是唯一上涨的板块。
+Eight of the 11 S&P 500 sectors ended lower, with consumer discretionary and materials leading the downside. The energy, technology and communication services sectors were the only advancers.
 
 
-The Aug. 28 distribution day on the Nasdaq and S&P 500 fell off the overall count due to the passage of time, a small dose of bullish news in a mostly quiet session.  
-由于时间的流逝，纳斯达克和标准普尔 500 指数 8 月 28 日的发行日从整体计数中下降，在基本平静的交易中出现了少量看涨消息。
+The Aug. 28 distribution day on the Nasdaq and S&P 500 fell off the overall count due to the passage of time, a small dose of bullish news in a mostly quiet session.
 
 
-The 10-year Treasury yield climbed to its highest level since Sept. 3, closing at 3.85%.  
-10 年期美国国债收益率攀升至 9 月 3 日以来的最高水平，收于 3.85%。
+The 10-year Treasury yield climbed to its highest level since Sept. 3, closing at 3.85%.
 
 
-The [probability for a 50-basis-point cut](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/countdown-to-fomc.html) in the fed funds rate — which is now at 4.75% to 5% — at the Nov. 7 Federal Open Market Committee meeting eased to 34.6% on Thursday. That's down sharply from 49.3% a week ago. Concurrently, the chances for a quarter-point cut to a range of 4.5%-4.75% ticked higher to 65.4% from 50.7% a week ago.  
-在 11 月 7 日的联邦公开市场委员会会议上，联邦基金利率[下调 50 个基点的可能性](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/countdown-to-fomc.html)——目前为 4.75% 至 5%——周四降至 34.6%。这比一周前的 49.3% 大幅下降。与此同时，将四分之一个百分点下调至 4.5%-4.75% 区间的机会从一周前的 50.7% 上升至 65.4%。
+The [probability for a 50-basis-point cut](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/countdown-to-fomc.html) in the fed funds rate — which is now at 4.75% to 5% — at the Nov. 7 Federal Open Market Committee meeting eased to 34.6% on Thursday. That's down sharply from 49.3% a week ago. Concurrently, the chances for a quarter-point cut to a range of 4.5%-4.75% ticked higher to 65.4% from 50.7% a week ago.
 
 
-Ahead of Friday's stock market open, the Labor Department will release its monthly employment report. The U.S. economy is expected to add 132,500 jobs in September, down from August's 142,000 jobs. The unemployment rate is estimated to hold steady at 4.2%, per Econoday estimates.  
-在周五股市开盘前，劳工部将发布其月度就业报告。预计美国经济 9 月份将增加 132,500 个工作岗位，低于 8 月份的 142,000 个工作岗位。根据 Econoday 的估计，失业率估计稳定在 4.2%。
+Ahead of Friday's stock market open, the Labor Department will release its monthly employment report. The U.S. economy is expected to add 132,500 jobs in September, down from August's 142,000 jobs. The unemployment rate is estimated to hold steady at 4.2%, per Econoday estimates.
 
 
-Fed policymakers have said they are keenly watching the labor market as they gauge future interest-rate decisions.  
-美联储政策制定者表示，他们在评估未来的利率决策时，正在密切关注劳动力市场。
+Fed policymakers have said they are keenly watching the labor market as they gauge future interest-rate decisions.
 
 
 
@@ -53,8 +44,7 @@ Fed policymakers have said they are keenly watching the labor market as they gau
 ---
 
 
-[**Nvidia, Apple And Tesla Highlight How To Handle This Market  
-英伟达、苹果和特斯拉强调如何应对这一市场**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
+[**Nvidia, Apple And Tesla Highlight How To Handle This Market**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
 
 
 
@@ -62,43 +52,36 @@ Fed policymakers have said they are keenly watching the labor market as they gau
 ---
 
 
-Dow Jones Winners And Losers道琼斯赢家和输家
-------------------------------------
+Dow Jones Winners And Losers
+----------------------------
 
 
-In the Dow Jones index, **IBM** ([IBM](https://research.investors.com/quote.aspx?symbol=IBM)) and **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) were among the handful of winners Thursday with gains of 1.4% and 0.5%, respectively.  
-在道琼斯指数中，**IBM** （[IBM](https://research.investors.com/quote.aspx?symbol=IBM)） 和 **Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 周四分别上涨 1.4% 和 0.5%，是少数几个赢家之一。
+In the Dow Jones index, **IBM** ([IBM](https://research.investors.com/quote.aspx?symbol=IBM)) and **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) were among the handful of winners Thursday with gains of 1.4% and 0.5%, respectively.
 
 
-On the downside, **Merck** ([MRK](https://research.investors.com/quote.aspx?symbol=MRK)) and **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) were the biggest losers during the session, down 1.7% and 1.6%, respectively. But **Goldman Sachs** ([GS](https://research.investors.com/quote.aspx?symbol=GS)), **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) and **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) combined to shave more than 75 points off the Dow.  
-不利的一面是，**默克** （[MRK](https://research.investors.com/quote.aspx?symbol=MRK)） 和**波音** （[BA）](https://research.investors.com/quote.aspx?symbol=BA) 是盘中最大的输家，分别下跌 1.7% 和 1.6%。但**高盛** （[GS）、](https://research.investors.com/quote.aspx?symbol=GS)**卡特彼勒** （[CAT）](https://research.investors.com/quote.aspx?symbol=CAT) 和 **Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 加起来比道琼斯指数下跌了 75 点以上。
+On the downside, **Merck** ([MRK](https://research.investors.com/quote.aspx?symbol=MRK)) and **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) were the biggest losers during the session, down 1.7% and 1.6%, respectively. But **Goldman Sachs** ([GS](https://research.investors.com/quote.aspx?symbol=GS)), **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) and **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) combined to shave more than 75 points off the Dow.
 
 
-[Most of the Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended lower as the Roundhill Magnificent Seven ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) exchange traded fund fell 0.1%. Notably, Mag 7 stock **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) bounced bullishly from its 50-day moving average line. Conversely, **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) skidded another 3.4%, and is close to adding a handle to a cup base that would make the new entry 264.86.  
-[大多数 Magnificent Seven 股票](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/)收低，Roundhill Magnificent Seven （[MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)） 交易所交易基金下跌 0.1%。值得注意的是，Mag 7 股票 **Nvidia** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 从其 50 天移动平均线看涨反弹。相反，**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 又下跌了 3.4%，并且接近在杯底上增加一个把手，这将使新条目达到 264.86。
+[Most of the Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended lower as the Roundhill Magnificent Seven ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) exchange traded fund fell 0.1%. Notably, Mag 7 stock **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) bounced bullishly from its 50-day moving average line. Conversely, **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) skidded another 3.4%, and is close to adding a handle to a cup base that would make the new entry 264.86.
 
 
-The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) dipped 0.3% Thursday. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/), **Palantir Technologies** ([PLTR](https://research.investors.com/quote.aspx?symbol=PLTR)) hit more new highs.  
-Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 周四下跌 0.3%。在 [IBD 50](https://research.investors.com/stock-lists/ibd-50/) 指数中，**Palantir Technologies** （[PLTR）](https://research.investors.com/quote.aspx?symbol=PLTR) 创下更多新高。
+The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) dipped 0.3% Thursday. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/), **Palantir Technologies** ([PLTR](https://research.investors.com/quote.aspx?symbol=PLTR)) hit more new highs.
 
 
-What To Do Now 现在该做什么
----------------------
+What To Do Now
+--------------
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/10/MP100324-258x300.jpg)
 
 
-Amid the stock market uptrend, IBD has an 80%-100% recommended exposure threshold, which means that investors should remain heavily invested. Investors who need to add more exposure should look for market leaders breaking out past correct entries.  
-在股市上涨趋势中，IBD 有 80%-100% 的建议风险门槛，这意味着投资者应继续进行大量投资。需要增加更多敞口的投资者应该寻找突破正确入场的市场领导者。
+Amid the stock market uptrend, IBD has an 80%-100% recommended exposure threshold, which means that investors should remain heavily invested. Investors who need to add more exposure should look for market leaders breaking out past correct entries.
 
 
-But investors should avoid complacency, as the sudden drop Tuesday was a reminder that major selling could surface at anytime. The current environment still requires [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market. Watch for sell signals and other abrupt character changes in your holdings.  
-但投资者应避免自满，因为周二的突然下跌提醒我们，重大抛售可能随时出现。当前环境仍然需要[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。这意味着逐步增加和减少风险敞口，以与大盘保持同步。观察您持有的资产中的卖出信号和其他突然的特征变化。
+But investors should avoid complacency, as the sudden drop Tuesday was a reminder that major selling could surface at anytime. The current environment still requires [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market. Watch for sell signals and other abrupt character changes in your holdings.
 
 
-[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s Breaking Out Today list featured no new stocks. Meanwhile, there are just six ideas appearing on MarketSurge's Near Pivot list. That suggests there aren't whole lot of new buying opportunities ready to emerge.  
-[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 的 Breaking Out Today 名单中没有新股。与此同时，MarketSurge 的 Near Pivot 列表中只出现了 6 个想法。这表明没有很多新的买入机会准备好出现。
+[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s Breaking Out Today list featured no new stocks. Meanwhile, there are just six ideas appearing on MarketSurge's Near Pivot list. That suggests there aren't whole lot of new buying opportunities ready to emerge.
 
 
 
@@ -106,8 +89,7 @@ But investors should avoid complacency, as the sudden drop Tuesday was a reminde
 ---
 
 
-[**Close, But No 'Perfect' Cigar For Nvidia, Broadcom. But Kudos To These 22 Gems.  
-接近，但没有 Nvidia、Broadcom 的“完美”雪茄。但要向这 22 颗宝石致敬。**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
+[**Close, But No 'Perfect' Cigar For Nvidia, Broadcom. But Kudos To These 22 Gems.**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
 
 
 
@@ -116,57 +98,46 @@ But investors should avoid complacency, as the sudden drop Tuesday was a reminde
 
 
 
-Stock Market Leaders: M/I Homes, Ryan, Vertiv股市领导者：M/I Homes、Ryan、Vertiv
-------------------------------------------------------------------------
+Stock Market Leaders: M/I Homes, Ryan, Vertiv
+---------------------------------------------
 
 
-Amid the stock market drop, leaders to watch include **M/I Homes** ([MHO](https://research.investors.com/quote.aspx?symbol=MHO)), **Ryan Specialty** ([RYAN](https://research.investors.com/quote.aspx?symbol=RYAN)) and **Vertiv** ([VRT](https://research.investors.com/quote.aspx?symbol=VRT))  
-在股市下跌中，值得关注的领导者包括 **M/I Homes** （[MHO](https://research.investors.com/quote.aspx?symbol=MHO)）、**Ryan Specialty** （[RYAN）](https://research.investors.com/quote.aspx?symbol=RYAN) 和 **Vertiv** （[VRT](https://research.investors.com/quote.aspx?symbol=VRT)）
+Amid the stock market drop, leaders to watch include **M/I Homes** ([MHO](https://research.investors.com/quote.aspx?symbol=MHO)), **Ryan Specialty** ([RYAN](https://research.investors.com/quote.aspx?symbol=RYAN)) and **Vertiv** ([VRT](https://research.investors.com/quote.aspx?symbol=VRT))
 
 
-M/I Homes closed Thursday 4% away from a 173.69 buy point in a cup with handle, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) pattern recognition. Its relative strength line is also close to new highs.  
-根据 [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 模式识别，M/I Homes 周四收盘时距离带把手杯子的 173.69 买入点 4%。其相对强弱线也接近新高。
+M/I Homes closed Thursday 4% away from a 173.69 buy point in a cup with handle, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) pattern recognition. Its relative strength line is also close to new highs.
 
 
-[Recent IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/ryan-stock-ryan-specialty-eyes-breakout-insurance-earnings-boom/) Ryan Specialty closed decisively above a 69.03 buy point in a cup base Thursday, notching new highs. The 5% buy area runs up to 72.48.  
-[最近的 IBD 股票](https://www.investors.com/research/ibd-stock-of-the-day/ryan-stock-ryan-specialty-eyes-breakout-insurance-earnings-boom/)Ryan Specialty 周四果断收于 69.03 的买入点上方，创下新高。5% 买入区域上涨至 72.48。
+[Recent IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/ryan-stock-ryan-specialty-eyes-breakout-insurance-earnings-boom/) Ryan Specialty closed decisively above a 69.03 buy point in a cup base Thursday, notching new highs. The 5% buy area runs up to 72.48.
 
 
-[New IBD Leaderboard stock](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) Vertiv is trying to break out past a 103.69 cup-with-handle [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/).  
-[新的 IBD 排行榜股票](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)Vertiv 正试图突破 103.69 带手柄[杯买入点](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/)。
+[New IBD Leaderboard stock](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) Vertiv is trying to break out past a 103.69 cup-with-handle [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/).
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_100324.pdf).  
-[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_100324.pdf)。
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_100324.pdf).
 
 
-*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.  
-请务必关注 Scott Lehtonen 在 [X at @IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) 上了解有关道琼斯工业平均指数和股市新闻的更多信息。*
+*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.*
 
 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
-查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones  
-在今天的股市和道琼斯值得购买和关注的顶级成长股](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
 
 
 
